<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#6495ED"
    android:padding="20dp"
    tools:context=".CatalogDataActivity"
    android:gravity="center">
    <TextView
        android:id="@+id/txt_cat_data_show"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:textStyle="bold"
        android:textColor="#36648B"
        android:textSize="50dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:padding="20dp">
        <TextView
            android:textColor="#36648B"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/id"/>
        <TextView
            android:padding="10dp"
            android:id="@+id/txt_cat_data_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#36648B"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:padding="20dp">

        <TextView
            android:textColor="#36648B"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/name" />
        <EditText
            android:id="@+id/txt_cat_data_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#36648B"
            android:textStyle="bold"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_cat_data_ok"
        android:background="@android:color/white"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/ok"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="#36648B"/>
</LinearLayout>