<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="#32CD32">

    <Button
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/logo" />
    <LinearLayout
        android:background="@android:color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:paddingLeft="10dp"
            android:gravity="center"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:text="@string/username"
            android:textSize="18dp"
            android:textColor="#006400"/>
        <EditText
            android:textColor="#006400"
            android:id="@+id/txt_login_username"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:background="@android:color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:paddingLeft="10dp"
            android:gravity="center"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:text="@string/password"
            android:textSize="18dp"
            android:textColor="#006400"/>
        <EditText
            android:textColor="#006400"
            android:id="@+id/txt_login_pass"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_ok"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/login"
        android:textColor="#006400"
        android:textSize="20dp"
        android:textStyle="bold" />
    <TextView
        android:paddingBottom="10dp"
        android:id="@+id/txtAbout"
        android:gravity="bottom"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="15dp"
        android:textStyle="bold" />
</LinearLayout>